--- a/_posts/2025-11-04-解决命令行无法通过VPN代理访问网络的问题.md
+++ b/_posts/2025-11-04-解决命令行无法通过VPN代理访问网络的问题.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "解决命令行无法通过VPN代理访问网络的问题!"
 date:   2025-11-04 10:55:00
-categories: cmd
+categories: windows
 ---
 # 解决在Windows上命令行无法通过VPN代理访问网络的问题
 
