更新默认模板，添加响应式图片短代码示例；为博客文章添加分类和标签

--- a/content/posts/2025-11-04-解决命令行无法通过VPN代理访问网络的问题.md
+++ b/content/posts/2025-11-04-解决命令行无法通过VPN代理访问网络的问题.md
@@ -2,6 +2,8 @@
 title = '解决命令行无法通过VPN代理访问网络的问题!'
 date = 2025-11-03T10:55:00
 draft = false
+categories = ["工具", "Windows"]
+tags = ["VPN", "代理", "PowerShell"]
 +++
 # 解决在Windows上命令行无法通过VPN代理访问网络的问题
 
